minor changes to first lecture

--- a/1. IPython Notebook Basics.ipynb
+++ b/1. IPython Notebook Basics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d79fa2db8c9fe6495f0e190d214e99a3f3c0adf15e68a242f7014040bbcf0952"
+  "signature": "sha256:da4a849f3b99376a1361f2419382cb29a35a852663dd92606fe68aec7c9d08b7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -339,7 +339,7 @@
         "      <td> 28.25</td>\n",
         "      <td> 27.640</td>\n",
         "      <td> 28.17</td>\n",
-        "      <td>  7470500</td>\n",
+        "      <td>  7700100</td>\n",
         "      <td> 28.17</td>\n",
         "    </tr>\n",
         "    <tr>\n",
@@ -348,7 +348,7 @@
         "      <td> 28.21</td>\n",
         "      <td> 27.820</td>\n",
         "      <td> 27.97</td>\n",
-        "      <td> 10420200</td>\n",
+        "      <td> 10697700</td>\n",
         "      <td> 27.97</td>\n",
         "    </tr>\n",
         "    <tr>\n",
@@ -357,7 +357,7 @@
         "      <td> 28.47</td>\n",
         "      <td> 28.220</td>\n",
         "      <td> 28.41</td>\n",
-        "      <td>  6994900</td>\n",
+        "      <td>  7096300</td>\n",
         "      <td> 28.41</td>\n",
         "    </tr>\n",
         "    <tr>\n",
@@ -375,7 +375,7 @@
         "      <td> 28.70</td>\n",
         "      <td> 28.430</td>\n",
         "      <td> 28.61</td>\n",
-        "      <td>  7435500</td>\n",
+        "      <td>  7440600</td>\n",
         "      <td> 28.61</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
@@ -384,21 +384,335 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 1,
        "text": [
         "             Open   High     Low  Close    Volume  Adj Close\n",
         "Date                                                        \n",
         "2015-06-15  27.75  27.95  27.660  27.92   5712400      27.92\n",
         "2015-06-16  27.69  28.01  27.550  27.75   5122800      27.75\n",
-        "2015-06-17  27.75  28.25  27.640  28.17   7470500      28.17\n",
-        "2015-06-18  28.21  28.21  27.820  27.97  10420200      27.97\n",
-        "2015-06-19  28.28  28.47  28.220  28.41   6994900      28.41\n",
+        "2015-06-17  27.75  28.25  27.640  28.17   7700100      28.17\n",
+        "2015-06-18  28.21  28.21  27.820  27.97  10697700      27.97\n",
+        "2015-06-19  28.28  28.47  28.220  28.41   7096300      28.41\n",
         "2015-06-22  28.24  28.32  27.985  28.32   3947800      28.32\n",
-        "2015-06-23  28.64  28.70  28.430  28.61   7435500      28.61"
+        "2015-06-23  28.64  28.70  28.430  28.61   7440600      28.61"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Different Data Types"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 2) Tuples\n",
+      "\n",
+      "Tuples are just like lists, but you can't change their values. Again, each value is numbered starting from zero, for easy reference. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "months = ('January','February','March','April','May')\n",
+      "print months"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(u'January', u'February', u'March', u'April', u'May')\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Note we use parentheses rather than square brackets."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Tuple has indices \n",
+      "# Similar to Lists\n",
+      "print months.index('February')\n",
+      "print months[1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n",
+        "February\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Sometime tuples are used to associate some values in pairs. \n",
+      "# In this example we made a list with pairs. Each pair is tuple (so cannot be changed). \n",
+      "\n",
+      "stop=1\n",
+      "attention=2\n",
+      "go=3\n",
+      "pairs = [(stop, 'red'), (attention, 'yellow'), (go, 'green')]\n",
+      "print pairs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[(1, u'red'), (2, u'yellow'), (3, u'green')]\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "The above example shows the usefulness of Tuples: Tuples can be used to capture a snap shot of variables, which are likely to be changed later (i.e. inside a running function).\n",
+      "\n",
+      "Here we associated integer values with strings. How we can work with such compound object? As usual, one can loop over each item (pair) and print it: "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "stop=1\n",
+      "attention=2\n",
+      "go=3\n",
+      "pairs = [(stop, 'red'), (attention, 'yellow'), (go, 'green')]\n",
+      "for j in pairs:\n",
+      "     print j         # we print pairs\n",
+      "     print j[0],j[1] # print each value in the pair"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, u'red')\n",
+        "1 red\n",
+        "(2, u'yellow')\n",
+        "2 yellow\n",
+        "(3, u'green')\n",
+        "3 green\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Dictionaries\n",
+      "\n",
+      "Dictionaries are opposite to Lists. In lists, the index are numbers starting from zero while you can extract an item by inputting its index. In dictionaries, the index does not have to be a number (i.e., a string).\n",
+      "\n",
+      "In a dictionary, we have an 'index' of words, and for each of them a definition. In Python, the word is called a 'key', and the definition a 'value'. The values in a dictionary are not numbered, unlike the lists. \n",
+      "\n",
+      "Let us make a small dictionary: "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = {}\n",
+      "data['hello'] = 'hola'\n",
+      "data['yes'] = 'si'\n",
+      "data['one'] = 'uno'\n",
+      "data['two'] = 'dos'\n",
+      "print data"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{u'yes': u'si', u'hello': u'hola', u'two': u'dos', u'one': u'uno'}\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What do you see? \n",
+      "\n",
+      "To retrieve a value corresponding to a given key, just use the key: "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print data['hello']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hola\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "One can also create a dictionary by explicitly writing them out in full"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = {'hello':'hola', 'one':'uno'}\n",
+      "print data"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{u'hello': u'hola', u'one': u'uno'}\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let us now make a loop over keys of a dictionary:\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = {}\n",
+      "data['hello'] = 'hola'\n",
+      "data['yes'] = 'si'\n",
+      "data['one'] = 'uno'\n",
+      "data['two'] = 'dos'\n",
+      "for key, value in data.iteritems():\n",
+      "    print \"{0} -> {1}\".format(key, value)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "yes -> si\n",
+        "hello -> hola\n",
+        "two -> dos\n",
+        "one -> uno\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##Sets\n",
+      "\n",
+      "A set is an unordered collection of objects that cannot have duplicate members. \n",
+      "They are similar to lists, except that \n",
+      "* they are unordered (like dictionaries). \n",
+      "* they do not allow duplicate entries. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a_set = set([1, 2, 3, 3, 3, 3])\n",
+      "print a_set"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "set([1, 2, 3])\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# A quick way to remove duplicates in a list\n",
+      "l = [1, 1, 2, 2, 3, 3, 4, 4, 5, 5]\n",
+      "a_set = set(l)\n",
+      "l = list(a_set)\n",
+      "print l"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 2, 3, 4, 5]\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     }
    ],
    "metadata": {}
