revision / new content

--- a/0. How to update your Class Notes.ipynb
+++ b/0. How to update your Class Notes.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6b629adf6251751520bcac766e57b2bf164963377248ab7c0c2586d1075f5fd7"
+  "signature": "sha256:5ff79f13c12694960eb005ca5294313a70cb32774cdd614cfdf6bc2326da3c4b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,8 +27,8 @@
      "input": [
       "!cd $HOME/Workspace/Notes/\n",
       "!git checkout -- .\n",
-      "!git fetch\n",
-      "!git merge origin/master"
+      "!git fetch upstream\n",
+      "!git merge upstream/master master"
      ],
      "language": "python",
      "metadata": {},
