New content on TS

--- a/9. Review - Time Series Analysis.ipynb
+++ b/9. Review - Time Series Analysis.ipynb
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -2855,21 +2855,21 @@
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2015-11-12 21:05:31.705500', '2015-11-12 21:06:31.705500',\n",
-       "               '2015-11-12 21:07:31.705500', '2015-11-12 21:08:31.705500',\n",
-       "               '2015-11-12 21:09:31.705500', '2015-11-12 21:10:31.705500',\n",
-       "               '2015-11-12 21:11:31.705500', '2015-11-12 21:12:31.705500',\n",
-       "               '2015-11-12 21:13:31.705500', '2015-11-12 21:14:31.705500', \n",
+       "DatetimeIndex(['2015-11-13 12:04:04.266243', '2015-11-13 12:05:04.266243',\n",
+       "               '2015-11-13 12:06:04.266243', '2015-11-13 12:07:04.266243',\n",
+       "               '2015-11-13 12:08:04.266243', '2015-11-13 12:09:04.266243',\n",
+       "               '2015-11-13 12:10:04.266243', '2015-11-13 12:11:04.266243',\n",
+       "               '2015-11-13 12:12:04.266243', '2015-11-13 12:13:04.266243', \n",
        "               ...\n",
-       "               '2016-01-21 07:35:31.705500', '2016-01-21 07:36:31.705500',\n",
-       "               '2016-01-21 07:37:31.705500', '2016-01-21 07:38:31.705500',\n",
-       "               '2016-01-21 07:39:31.705500', '2016-01-21 07:40:31.705500',\n",
-       "               '2016-01-21 07:41:31.705500', '2016-01-21 07:42:31.705500',\n",
-       "               '2016-01-21 07:43:31.705500', '2016-01-21 07:44:31.705500'],\n",
+       "               '2016-01-21 22:34:04.266243', '2016-01-21 22:35:04.266243',\n",
+       "               '2016-01-21 22:36:04.266243', '2016-01-21 22:37:04.266243',\n",
+       "               '2016-01-21 22:38:04.266243', '2016-01-21 22:39:04.266243',\n",
+       "               '2016-01-21 22:40:04.266243', '2016-01-21 22:41:04.266243',\n",
+       "               '2016-01-21 22:42:04.266243', '2016-01-21 22:43:04.266243'],\n",
        "              dtype='datetime64[ns]', length=100000, freq='T', tz=None)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4301,13 +4301,245 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Time Zone Handling\n",
+    "\n",
+    " - Localization of time\n",
+    " \n",
+    "Pandas does not know what time zone the data is associated with. \n",
+    "\n",
+    "If you are dealing with multiple markets, then time zone differences and daylight savings will be an important issue.\n",
+    "\n",
+    "Pandas have outstanding capacity to handle timezone."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pandas import Series, DataFrame, Panel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pd.Timestamp('now')  # This is naive timestamp, where no timezone information is supplied.\n",
+    "stamp_naive = pd.Timestamp('2015-11-11 11:00')\n",
+    "stamp_naive.tz  # As you can see, there is no TimeZone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-11-11 11:00:00-06:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<DstTzInfo 'US/Central' CST-1 day, 18:00:00 STD>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stamp = pd.Timestamp('2015-11-11 11:00', tz='US/Central')\n",
+    "print(stamp)\n",
+    "stamp.tz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1447261200000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Localization - To convert a naive Timestamp to a Timestamp with Timezone\n",
+    "stamp2 = stamp_naive.tz_localize('US/Central')\n",
+    "print(stamp2.value)  # The value is invariant, regardless of the timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1447261200000000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2015-11-12 01:00:00+0800', tz='Asia/Shanghai')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To convert a local time from 1 zone to another, use .tz_convert()\n",
+    "stamp3 = stamp2.tz_convert('Asia/Shanghai')\n",
+    "print(stamp3.value)\n",
+    "stamp3\n",
+    "# As you can see, the value underlying the Timestamp is the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can check that stamp2 and stamp3 are essentially the same\n",
+    "stamp2 ==  stamp3\n",
+    "# This is a great feature to compare time from different zones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-04-01 00:00:00+11:00     0\n",
+       "2015-04-02 00:00:00+11:00     1\n",
+       "2015-04-03 00:00:00+11:00     2\n",
+       "2015-04-04 00:00:00+11:00     3\n",
+       "2015-04-05 00:00:00+11:00     4\n",
+       "2015-04-06 00:00:00+10:00     5\n",
+       "2015-04-07 00:00:00+10:00     6\n",
+       "2015-04-08 00:00:00+10:00     7\n",
+       "2015-04-09 00:00:00+10:00     8\n",
+       "2015-04-10 00:00:00+10:00     9\n",
+       "2015-04-11 00:00:00+10:00    10\n",
+       "2015-04-12 00:00:00+10:00    11\n",
+       "2015-04-13 00:00:00+10:00    12\n",
+       "2015-04-14 00:00:00+10:00    13\n",
+       "2015-04-15 00:00:00+10:00    14\n",
+       "2015-04-16 00:00:00+10:00    15\n",
+       "2015-04-17 00:00:00+10:00    16\n",
+       "2015-04-18 00:00:00+10:00    17\n",
+       "2015-04-19 00:00:00+10:00    18\n",
+       "2015-04-20 00:00:00+10:00    19\n",
+       "Freq: D, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try that with timeseries\n",
+    "rng = pd.date_range('2015-4-01', periods=20, tz='Australia/Sydney')\n",
+    "ts = Series(np.arange(20), index=rng)\n",
+    "ts\n",
+    "# You can notice that day-light savings was adjusted on 2015-04-6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-03-31 21:00:00+08:00     0\n",
+       "2015-04-01 21:00:00+08:00     1\n",
+       "2015-04-02 21:00:00+08:00     2\n",
+       "2015-04-03 21:00:00+08:00     3\n",
+       "2015-04-04 21:00:00+08:00     4\n",
+       "2015-04-05 22:00:00+08:00     5\n",
+       "2015-04-06 22:00:00+08:00     6\n",
+       "2015-04-07 22:00:00+08:00     7\n",
+       "2015-04-08 22:00:00+08:00     8\n",
+       "2015-04-09 22:00:00+08:00     9\n",
+       "2015-04-10 22:00:00+08:00    10\n",
+       "2015-04-11 22:00:00+08:00    11\n",
+       "2015-04-12 22:00:00+08:00    12\n",
+       "2015-04-13 22:00:00+08:00    13\n",
+       "2015-04-14 22:00:00+08:00    14\n",
+       "2015-04-15 22:00:00+08:00    15\n",
+       "2015-04-16 22:00:00+08:00    16\n",
+       "2015-04-17 22:00:00+08:00    17\n",
+       "2015-04-18 22:00:00+08:00    18\n",
+       "2015-04-19 22:00:00+08:00    19\n",
+       "Freq: D, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No a problem in converting timezone\n",
+    "ts.tz_convert('Australia/Perth')"
+   ]
   },
   {
    "cell_type": "code",
