--- a/10. Pandas Cookbook.ipynb
+++ b/10. Pandas Cookbook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Coolbook\n",
+    "Cookbook\n",
     "--\n",
     "\n",
     "A replication exercises of [This Link](http://pandas.pydata.org/pandas-docs/stable/cookbook.html)."
