new notes related to Stata

--- a/0. How to update your Class Notes.ipynb
+++ b/0. How to update your Class Notes.ipynb
@@ -1,50 +1,61 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:5ff79f13c12694960eb005ca5294313a70cb32774cdd614cfdf6bc2326da3c4b"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following script to update your Python Class Notes\n",
+    "==\n",
+    "**Caution: Saving important files in this Workspace/Notes/ folder**\n",
+    "\n",
+    "- Once updated, any modifications on existing lecture notes will be removed.\n",
+    "\n",
+    "- However, new files/notebooks in this folder will not be affected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Run the following script to update your Python Class Notes\n",
-      "==\n",
-      "**Caution: Saving important files in this Workspace/Notes/ folder**\n",
-      "\n",
-      "- Once updated, any modifications on existing lecture notes will be removed.\n",
-      "\n",
-      "- However, new files/notebooks in this folder will not be affected."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up-to-date.\r\n"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "!cd $HOME/Workspace/Notes/\n",
-      "!git checkout -- .\n",
-      "!git fetch upstream\n",
-      "!git merge upstream/master master"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Already up-to-date.\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
     }
    ],
-   "metadata": {}
+   "source": [
+    "!cd $HOME/Workspace/Notes/\n",
+    "!git checkout -- .\n",
+    "!git fetch upstream\n",
+    "!git merge upstream/master master"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "hide_input": false,
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
